Fix hero4.png display on mobile devices

--- a/style.css
+++ b/style.css
@@ -156,6 +156,23 @@ body {
   justify-content: center;
 }
 
+@media (max-width: 799px) {
+  #hero {
+    background-attachment: scroll;
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+  }
+}
+
+@media (max-width: 477px) {
+  #hero {
+    background-attachment: scroll;
+    padding: 0 20px;
+    background-position: 55%;
+  }
+}
+
 #hero h4 {
   padding-bottom: 15px;
 }
@@ -1018,12 +1035,6 @@ footer .copyright {
     display: none;
   }
 
-  #hero {
-    height: 70vh;
-    padding: 0 80px;
-    background-position: top 30% right 30%;
-  }
-
   #feature {
     justify-content: center;
   }
@@ -1087,10 +1098,6 @@ footer .copyright {
 
   h2 {
     font-size: 32px;
-  }
-  #hero {
-    padding: 0 20px;
-    background-position: 55%;
   }
 
   #feature {
